2009-10-09  Ivan Maidanski <ivmai@mail.ru>

	* alloc.c (GC_collect_or_expand): Add "retry" argument; add the
	comments; don't use "default" stop_func on a retry if
	GC_dont_expand.
	* alloc.c (GC_collect_or_expand): Reformat the code (make the
	indentation style uniform across the function).
	* alloc.c (GC_allocobj): Pass "retry" argument to
	GC_collect_or_expand().
	* malloc.c (GC_alloc_large): Ditto.
	* include/private/gc_priv.h (GC_collect_or_expand): Move the
	declaration to malloc.c; add "retry" argument.

2009-10-09  Ivan Maidanski <ivmai@mail.ru>

	* alloc.c (GC_start_call_back): Move the variable definition from
	misc.c.
	* include/private/gc_priv.h (GC_start_call_back): Remove the
	declaration.
	* alloc.c (GC_notify_full_gc): Remove unnecessary cast of 0.
	* alloc.c (GC_try_to_collect_inner): Also call stop_func at the
	beginning of the function.
	* include/gc.h (GC_try_to_collect): Refine the comment about
	stop_func.

2009-10-08  Ivan Maidanski <ivmai@mail.ru>

	* alloc.c (GC_default_stop_func, GC_try_to_collect_general,
	GC_gcollect): Add the comment.
	* alloc.c (GC_try_to_collect_general): Move the assertion on
	stop_func != 0 to GC_try_to_collect().
	* alloc.c (GC_try_to_collect_general): If stop_func == 0 then use
	GC_default_stop_func instead (holding the lock).
	* alloc.c (GC_gcollect): Pass 0 as stop_func instead of
	GC_default_stop_func (to prevent data races).

2009-10-08  Ivan Maidanski <ivmai@mail.ru>

	* Makefile.direct: Move "define arguments" documentation to
	doc/README.macros; add reference to doc/README.macros.
	* Makefile.dj: Change the documentation reference to
	doc/README.macros.
	* README.QUICK: Ditto.
	* configure.ac: Ditto.
	* allchblk.c: Remove unnecessary "-D" from the comment.
	* doc/README.macros: Ditto.
	* README.environment: Ditto.
	* include/gc.h: Ditto.
	* include/gc_inline.h: Ditto.
	* include/private/gcconfig.h: Ditto.
	* README.QUICK: Fix a typo.
	* README.QUICK: Expand all tabs to spaces.
	* configure: Regenerate.